Fixed auto and 100% height causing section overlap. And navbar collapse font size.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -20,7 +20,7 @@ h6 {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     font-weight: 600;
-    margin-top: 1.0em;
+    margin-top: 1.25em;
     margin-bottom: 0.25em;
 }
 
@@ -41,11 +41,11 @@ p {
 }
 
 
-@media(max-width:767px) {
-    body {
-        font-size: 0.5em;
-    }
-}
+//@media(max-width:767px) {
+//    body {
+//        font-size: 0.5em;
+//    }
+//}
 
 .link-color {
     color: {{ site.color.links }};
@@ -119,7 +119,8 @@ header #intro-scroll {
 
 
 section {
-    height: 100%;
+    height: auto;
+    min-height: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
     border-top: 1px solid {{ site.color.border }};
@@ -141,7 +142,6 @@ footer p {
 
 @media(max-width:767px) {
     header {
-        height: auto;
         padding: 100px 0;
     }
 
@@ -153,9 +153,7 @@ footer p {
     }
 
     section {
-        height: auto;
-        padding-top: 50px;
-        padding-bottom: 50px;
+        
     }
 
     footer {
